Archive2/4d/58f4dc1d366c88/output
In file included from /usr/include/c++/4.8/thread:35:0,
                 from main.cpp:3:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp:6:1: error: ‘thread_local’ does not name a type
 thread_local unsigned int rage = 1; 
 ^
main.cpp:7:1: error: ‘mutex’ in namespace ‘std’ does not name a type
 std::mutex cout_mutex;
 ^
main.cpp: In function ‘void increase_rage(const string&)’:
main.cpp:11:7: error: ‘rage’ was not declared in this scope
     ++rage;
       ^
main.cpp:12:5: error: ‘lock_guard’ is not a member of ‘std’
     std::lock_guard<std::mutex> lock(cout_mutex);
     ^
main.cpp:12:21: error: ‘mutex’ is not a member of ‘std’
     std::lock_guard<std::mutex> lock(cout_mutex);
                     ^
main.cpp:12:38: error: ‘cout_mutex’ was not declared in this scope
     std::lock_guard<std::mutex> lock(cout_mutex);
                                      ^
main.cpp:12:48: error: ‘lock’ was not declared in this scope
     std::lock_guard<std::mutex> lock(cout_mutex);
                                                ^
main.cpp: In function ‘int main()’:
main.cpp:18:5: error: ‘thread’ is not a member of ‘std’
     std::thread a(increase_rage, "a"), b(increase_rage, "b");
     ^
main.cpp:18:17: error: expected ‘;’ before ‘a’
     std::thread a(increase_rage, "a"), b(increase_rage, "b");
                 ^
main.cpp:21:9: error: ‘lock_guard’ is not a member of ‘std’
         std::lock_guard<std::mutex> lock(cout_mutex);
         ^
main.cpp:21:25: error: ‘mutex’ is not a member of ‘std’
         std::lock_guard<std::mutex> lock(cout_mutex);
                         ^
main.cpp:21:42: error: ‘cout_mutex’ was not declared in this scope
         std::lock_guard<std::mutex> lock(cout_mutex);
                                          ^
main.cpp:21:52: error: ‘lock’ was not declared in this scope
         std::lock_guard<std::mutex> lock(cout_mutex);
                                                    ^
main.cpp:22:51: error: ‘rage’ was not declared in this scope
         std::cout << "Rage counter for main: " << rage << '\n';
                                                   ^
main.cpp:25:5: error: ‘a’ was not declared in this scope
     a.join();
     ^
main.cpp:26:5: error: ‘b’ was not declared in this scope
     b.join();
     ^
